FINERACT-2081: Rework Loan Account data